minor change in style and remove 394 JS

--- a/team-page.html
+++ b/team-page.html
@@ -74,7 +74,7 @@
     </div>
 
     <div class="group">
-      <h2>For complaints, mail us:</h2>
+      <h2>For autographs, mail us:</h2>
       <div>
         <input name="email" id="email" value="doug@lewagon.org" />
         <input type="submit" value="Mail Doug">
